fix stretched sprite image in safari

--- a/src/App.scss
+++ b/src/App.scss
@@ -234,7 +234,7 @@ body {
   &--sprite {
     display: block;
     width: 70%;
-    height: auto;
+    height: 100%;
   }
 
   &--foot {
